# kolgotia

./: .gitignore  Dockerfile  bot.py  pyproject.toml  qr.py  railway.json  railway.toml  requirements.txt  tickets.json  tickets.py
templates/: results.html
