[tool.poetry]
name = "kolgotia-lottery-bot"
version = "0.1.0"
description = ""
authors = ["ta2-1 <taras.semenenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
python-telegram-bot = "21.9"
anyio = "4.2.0"
certifi = "2023.11.17"
exceptiongroup = "1.2.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "^0.27.0"
idna = "3.6"
sniffio = "1.3.0"
typing_extensions = "4.9.0"
pymongo = "4.9"
motor = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"